# hikari

./: .gitignore  CHANGELOG.md  README.md  gradle.properties
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hikari-image-pipeline.cpp
app/src/main/java/eu/kanade/domain/: DomainModule.kt
app/src/main/java/eu/kanade/presentation/browse/: ExtensionDetailsScreen.kt  ExtensionFilterScreen.kt  ExtensionsScreen.kt  GlobalSearchScreen.kt  MigrateSourceScreen.kt  SourcesFilterScreen.kt  SourcesScreen.kt
app/src/main/java/eu/kanade/presentation/components/: AdaptiveSheet.kt  TabbedDialog.kt  TabbedScreen.kt
app/src/main/java/eu/kanade/presentation/history/: HistoryScreen.kt
app/src/main/java/eu/kanade/tachiyomi/: App.kt
app/src/main/java/hikari/feature/upcoming/: UpcomingScreenModel.kt
core/common/: build.gradle.kts
data/src/main/java/hikari/data/repository/: ExtensionRepoRepositoryImpl.kt
data/src/main/java/tachiyomi/data/manga/: MangaMapper.kt  MangaRepositoryImpl.kt
data/src/main/sqldelight/tachiyomi/data/: mangas.sq
data/src/main/sqldelight/tachiyomi/migrations/: 11.sqm
gradle/: libs.versions.toml
gradle/build-logic/src/main/kotlin/: PluginAndroidApplication.kt  PluginAndroidLibrary.kt  PluginAndroidTest.kt
gradle/build-logic/src/main/kotlin/hikari/gradle/: BuildConfig.kt
i18n/src/commonMain/moko-resources/base/: strings.xml
presentation-core/: build.gradle.kts
source-local/src/androidMain/kotlin/tachiyomi/source/local/: LocalSource.kt
(+187 files in other folders)
